# Lexical_Syntax_Analysis

./: CMakeLists.txt  Main  Main.cpp  README.md
.cache/clangd/index/: Main.cpp.E9BF8F107B361C7C.idx  analysis.cpp.069DE97DA011DCB8.idx  analysis.h.6F884B019068A551.idx  error.cpp.594E650D2DAA1F7D.idx  error.h.04E54384B51AB3AE.idx  statistic.h.52656E3C5919256E.idx  statistics.cpp.A04621542276A997.idx
Main.dSYM/Contents/Resources/DWARF/: Main
analysis/: CMakeLists.txt  analysis.cpp  analysis.h
analysis/error/: CMakeLists.txt  error.cpp  error.h
analysis/statistics/: CMakeLists.txt  statistic.h  statistics.cpp
